--- a/css/1.css
+++ b/css/1.css
@@ -208,3 +208,7 @@
     display:inline-flex
 
 }
+/* @import url('https://fonts.googleapis.com/css?family=Vollkorn');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css?family=Baloo'); */
