--- a/css/2.css
+++ b/css/2.css
@@ -1,3 +1,4 @@
+
 p {
     display: block;
     margin-block-start: 1em;
@@ -85,3 +86,7 @@ p {
     height: 400px;
     background-size: contain;
 }
+.move{
+    display: flex;
+}
+
